# apertium-es-gl

./: .gitattributes  .gitignore  ChangeLog  Makefile.am  README  apertium-es-gl.es-gl.dix  apertium-es-gl.es-gl.dix.xml  apertium-es-gl.es-gl.t1x  apertium-es-gl.es.dix  apertium-es-gl.es.dix.xml  apertium-es-gl.gl-es.t1x  apertium-es-gl.gl.dix  apertium-es-gl.gl.dix.xml  apertium-es-gl.post-es.dix  apertium-es-gl.post-gl.dix  configure.ac  modes.xml
test/: es-gl-chunker-expected.txt  es-gl-disam-expected.txt  es-gl-generator-expected.txt  es-gl-input.txt  es-gl-morph-expected.txt  es-gl-postgen-expected.txt  es-gl-postgen-gold.txt  es-gl-pretransfer-expected.txt  gl-es-chunker-expected.txt  gl-es-generator-expected.txt  gl-es-input.txt  gl-es-morph-expected.txt  gl-es-postgen-expected.txt  gl-es-postgen-gold.txt  gl-es-tagger-expected.txt  tests.json
